--- a/index.html
+++ b/index.html
@@ -633,16 +633,16 @@ var iframe_id = "";
     <div class="swiper-container home-mo-banner">
         <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                <a href="#" title="健康中国  我们在行动">
-				<div class="banner-item" style="background-image: url('upfile/banner/banner-0.jpg')">
+                <a href="#" title="红船精神">
+				<div class="banner-item" style="background-image: url('upfile/banner/sj021.jpg')">
 </div>
 </a>
             </div>
                         <div class="swiper-slide">
-                <a href="#" title="温热理疗仪">
-				<div class="banner-item" style="background-image: url('upfile/banner/bg022.jpg')">
+               <a href="#" title="波动康美管理仪">
+				<div class="banner-item" style="background-image: url('upfile/banner/sj022.jpg')">
 </div>
-</a>				
+</a>					
             </div>
             
         </div>
